force-app/main/default/objects/Queue_Priority_Matrix__c/Queue_Priority_Matrix__c.object-meta.xml
<CustomObject>
    <label>Queue Priority Matrix</label>
    <nameField>
        <displayFormat>Queue - {0000}</displayFormat>
        <label>Queue Priority Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Priority Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>