force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Course_Tag__c.field-meta.xml
<CustomField>
    <fullName>Course_Tag__c</fullName>
    <label>Course Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course_Tag</valueSetName>
    </valueSet>
</CustomField>