force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Levels__c.field-meta.xml
<CustomField>
    <fullName>Levels__c</fullName>
    <label>Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>M_Stages</valueSetName>
    </valueSet>
</CustomField>