force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Queue_Priority__c.field-meta.xml
<CustomField>
    <fullName>Queue_Priority__c</fullName>
    <label>Queue Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>