force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Role_tag__c.field-meta.xml
<CustomField>
    <fullName>Role_tag__c</fullName>
    <label>Role tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_tag</valueSetName>
    </valueSet>
</CustomField>