force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Sequence_Tag__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Tag__c</fullName>
    <label>Sequence Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sequence_Tag</valueSetName>
    </valueSet>
</CustomField>