force-app/main/default/objects/Queue_Priority_Matrix__c/fields/Source_Tag__c.field-meta.xml
<CustomField>
    <fullName>Source_Tag__c</fullName>
    <label>Source Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Tag</valueSetName>
    </valueSet>
</CustomField>