force-app/main/default/objects/Queue_Priority_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Queue_Priority__c</columns>
    <columns>Primary_tag__c</columns>
    <columns>Source_Tag__c</columns>
    <columns>Levels__c</columns>
    <columns>Role_tag__c</columns>
    <columns>Course_Tag__c</columns>
    <columns>Sequence_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>