force-app/main/default/objects/Queue_Priority_Matrix__c/listViews/Bucket_2.listView-meta.xml
<ListView>
    <fullName>Bucket_2</fullName>
    <columns>NAME</columns>
    <columns>Queue_Priority__c</columns>
    <columns>Primary_tag__c</columns>
    <columns>Source_Tag__c</columns>
    <columns>Levels__c</columns>
    <columns>Role_tag__c</columns>
    <columns>Course_Tag__c</columns>
    <columns>Sequence_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Tag__c</field>
        <operation>equals</operation>
        <value>Bucket 2</value>
    </filters>
    <label>Bucket 2</label>
</ListView>